Shooting Stars Background Audio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <center><h2>By: Huevos Rancheros
 </h2>
 </center>
-
+<audio autoplay>
+<source src="shootingstars.mp4" type="audio/mpeg"></source>
+</audio>
 
 
 	
