--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <center><h2>By: Huevos Rancheros
 </h2>
 </center>
-
+<audio autoplay>
+<source src="sounds/mii.mp3" type="audio/mpeg">
+</audio>
+ 
 
 
 	
